# products_microservice

./: .env  README.md  docker-compose.yml  pyproject.toml
queries/: create_db.sql  create_user_cart_table.sql  create_user_favorite_table.sql
services/backend_for_frontend/: main.py  pyproject.toml
services/products/: main.py  pyproject.toml
services/stock_availability/: main.py  pyproject.toml
services/user_cart/: main.py  pyproject.toml
services/user_favorite/: main.py  pyproject.toml
utils/: db.py  pyproject.toml
