[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "utils"
module-root = ""

[project]
name = "products-microservice"
version = "0.1.0"
description = "Products from the book"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "services/stock_availability",
    "services/user_cart",
    "services/user_favorite",
    "services/products",
]
